sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: reassignment to val
			fini=false
                            ^AlgBubbleSort1:11: error: not found: value fini
} while (fini == false)
         ^